--- a/.npmignore
+++ b/.npmignore
@@ -36,4 +36,38 @@ jest-puppeteer.config.js
 webpack.config.js
 /lib
 package-lock.json
+*.exe
+*.obj
+*.out
+*.compile
+*.native
+*.byte
+*.cmo
+*.annot
+*.cmi
+*.cmx
+*.cmt
+*.cmti
+*.cma
+*.a
+*.cmxa
+*.obj
+*~
+*.annot
+*.cmj
+*.bak
+lib/bs
+*.mlast
+*.mliast
+.vscode
+.merlin
+.bsb.lock
+.idea
+
+node_modules
+*.bs.js
 __tests__
+/test
+/test_dist
+package-lock.json
+webpack.config.js
