--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@zpnester/bs-sw",
-  "version": "0.0.5",
+  "name": "@zpnester/bs-pwa",
+  "version": "0.0.0",
   "author": {
     "name": "Andriy Nesterenko",
     "email": "zpnester@gmail.com",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/zpnester/bs-sw.git"
+    "url": "https://github.com/zpnester/bs-pwa.git"
   },
   "license": "MIT",
   "scripts": {
@@ -16,17 +16,26 @@
     "build": "bsb -make-world",
     "watch": "bsb -make-world -w",
     "test:webpack": "webpack -w",
-    "test:serve": "serve -p 5001 test_dist",
+    "test:serve": "serve -p 8081 test_dist",
     "start": "concurrently --raw \"npm:watch\" \"npm:test:webpack\" \"npm:test:serve\""
   },
-  "keywords": [],
+  "keywords": [
+    "BuckleScript",
+    "PWA",
+    "ServiceWorker"
+  ],
   "devDependencies": {
     "bs-platform": "^4.0.5",
     "concurrently": "^4.1.0",
+    "copy-webpack-plugin": "^4.6.0",
     "cross-env": "^5.2.0",
     "expect": "^23.6.0",
+    "html-webpack-plugin": "^3.2.0",
     "serve": "^10.0.2",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2"
+  },
+  "dependencies": {
+    "@zpnester/bs-filereader": "0.2.0"
   }
 }
