--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,6 +1,6 @@
 {
-  "name": "@zpnester/bs-sw",
-  "version": "0.0.5",
+  "name": "@zpnester/bs-pwa",
+  "version": "0.0.0",
   "sources": [
     {
       "dir": "src",
@@ -17,7 +17,7 @@
   },
   "suffix": ".bs.js",
   "bs-dependencies": [
-     
+     "@zpnester/bs-filereader"
   ],
   "warnings": {
     "error" : "+101"
