--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zpnester/bs-pwa",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "author": {
     "name": "Andriy Nesterenko",
     "email": "zpnester@gmail.com",
@@ -25,6 +25,7 @@
     "ServiceWorker"
   ],
   "devDependencies": {
+    "@zpnester/bs-filereader": "0.2.0",
     "bs-platform": "^4.0.5",
     "concurrently": "^4.1.0",
     "copy-webpack-plugin": "^4.6.0",
@@ -35,7 +36,5 @@
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2"
   },
-  "dependencies": {
-    "@zpnester/bs-filereader": "0.2.0"
-  }
+  "dependencies": {}
 }
