rename to window_, fix ssr crash, self_ is unsafe

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zpnester/bs-pwa",
-  "version": "0.0.15",
+  "version": "0.0.16-beta.0",
   "author": {
     "name": "Andriy Nesterenko",
     "email": "zpnester@gmail.com",
