--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,6 +1,5 @@
 {
   "name": "@zpnester/bs-pwa",
-  "version": "0.0.15",
   "sources": [
     {
       "dir": "src",
@@ -12,7 +11,7 @@
     }
   ],
   "package-specs": {
-    "module": "commonjs",
+    "module": "es6",
     "in-source": true
   },
   "suffix": ".bs.js",
