--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zpnester/bs-pwa",
-  "version": "0.0.16",
+  "version": "0.0.17",
   "author": {
     "name": "Andriy Nesterenko",
     "email": "zpnester@gmail.com",
@@ -17,6 +17,7 @@
     "watch": "bsb -make-world -w",
     "test:webpack": "webpack -w",
     "test:serve": "serve -p 8081 test_dist",
+    "test:wserve": "concurrently --raw \"npm:test:webpack\" \"npm:test:serve\"",
     "dev": "concurrently --raw \"npm:watch\" \"npm:test:webpack\" \"npm:test:serve\""
   },
   "keywords": [
@@ -28,11 +29,12 @@
   ],
   "devDependencies": {
     "@zpnester/bs-filereader": "0.2.5",
-    "bs-platform": "^5.0.0",
+    "bs-platform": "^5.0.4",
     "concurrently": "^4.1.0",
     "copy-webpack-plugin": "^4.6.0",
     "cross-env": "^5.2.0",
     "expect": "^23.6.0",
+    "reason-react": "^0.7.0",
     "serve": "^10.0.2",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2"
